@@ -320,7 +320,6 @@
   public function genres() {
     if (empty($this->moviegenres)) {
       if ($this->page["Title"] == "") $this->openpage ("Title");
-#      if (preg_match_all("/\<a href\=\"\/Sections\/Genres\/[\w\-]+\/\"\>(.*?)\<\/a\>/",$this->page["Title"],$matches))
       if (preg_match_all("@<a href\=\"/genre/[\w\-]+\"\>(.*?)\</a>@",$this->page["Title"],$matches))
         $this->moviegenres = $matches[1];
     }
@@ -413,23 +412,41 @@
  #--------------------------------------------------------[ Plot (Outline) ]---
   /** Get the main Plot outline for the movie
    * @method plotoutline
+   * @param optional boolean fallback Fallback to storyline if we could not catch plotoutline? Default: FALSE
    * @return string plotoutline
    * @see IMDB page / (TitlePage)
    */
-  public function plotoutline() {
+  public function plotoutline($fallback=FALSE) {
     if ($this->main_plotoutline == "") {
-      if ($this->page["Title"] == "") $this->openpage ("Title");
-      if (@preg_match('!Storyline</h2>\s*(.*?)<h4!ims',$this->page["Title"],$match)) {
-        if (preg_match('!(.*?)<em class="nobr">Written by!ims',$match[1],$det))
-          $this->main_plotoutline = $det[1];
-        elseif (preg_match('!(.*)\s<span class="see-more inline">!ims',$match[1],$det))
-          $this->main_plotoutline = $det[1];
-        elseif (preg_match('!(.*)\s\|!ims',$match[1],$det))
-          $this->main_plotoutline = $det[1];
-        else $this->main_plotoutline = trim($match[1]);
+      if ($this->page["Title"] == "") $this->openpage("Title");
+      if (preg_match('!<span class="rating-rating">.*?(<p>.*?)\s*<div!ims',$this->page['Title'],$match)) {
+        $this->main_plotoutline = trim($match[1]);
+      } elseif($fallback) {
+        $this->main_plotoutline = $this->storyline();
       }
     }
     return $this->main_plotoutline;
+  }
+
+  /** Get the Storyline for the movie
+   * @method storyline
+   * @return string storyline
+   * @see IMDB page / (TitlePage)
+   */
+  public function storyline() {
+    if ($this->main_storyline == "") {
+      if ($this->page["Title"] == "") $this->openpage ("Title");
+      if (@preg_match('!Storyline</h2>\s*(.*?)<h4!ims',$this->page["Title"],$match)) {
+        if (preg_match('!(.*?)<em class="nobr">Written by!ims',$match[1],$det))
+          $this->main_storyline = $det[1];
+        elseif (preg_match('!(.*)\s<span class="see-more inline">!ims',$match[1],$det))
+          $this->main_storyline = $det[1];
+        elseif (preg_match('!(.*)\s\|!ims',$match[1],$det))
+          $this->main_storyline = $det[1];
+        else $this->main_storyine = trim($match[1]);
+      }
+    }
+    return $this->main_storyline;
   }
 
  #--------------------------------------------------------[ Photo specific ]---
